[package]
name = "rusty2600-riot"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
serde.workspace = true
bitflags = "2"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "riot_bench"
harness = false

[lints]
workspace = true
