[package]
name = "rusty2600-test-harness"
version = "1.10.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
test-roms = []          # compiles the committed CC0/public-domain suites + integration tests
commercial-roms = []    # the local-dump oracle (ROMs gitignored; commit only screenshots/.snap)

[dependencies]
rusty2600-core = { path = "../rusty2600-core", version = "1.10.0" }
rusty2600-cpu = { path = "../rusty2600-cpu", version = "1.10.0" }

[dev-dependencies]
insta = "1"

[lints]
workspace = true
