[package]
name = "rusty2600-tia"
version = "2.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
serde.workspace = true
bitflags = "2"
libm = "0.2"
rusty2600-cart = { path = "../rusty2600-cart", version = "2.2.0", default-features = false }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "tia_bench"
harness = false

[lints]
workspace = true
