[package]
name = "rusty2600-tia"
version = "2.12.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []
# Output-only per-pixel object-ID mask (`ObjectId`/`ObjectTag`, `Tia::object_mask`) parallel to
# `video_buffer`, feeding the frontend's `hd-pack` sprite-replacement splice. Adds a new, separate
# output channel only -- `render_pixel`'s existing priority-resolution logic and `video_buffer`'s
# byte content are untouched when this is off (the default).
hd-pack = []

[dependencies]
serde.workspace = true
bitflags = "2"
libm = "0.2"
rusty2600-cart = { path = "../rusty2600-cart", version = "2.3.0", default-features = false }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "tia_bench"
harness = false

[lints]
workspace = true
